# PIMotor

./: .autotools  .cproject  .project  Makefile.in  NEWS  README  configure  configure.ac
autom4te.cache/: output.1  requests  traces.1
build-ARM/: Makefile  config.status
build-ARM/src/: Makefile
build-ARM/src/.deps/: PiMotor.Po
src/: Makefile.am  Makefile.in  PiMotor.cpp
