bin_PROGRAMS=pimotor
pimotor_SOURCES=PiMotor.cpp

AM_CXXFLAGS=-I/home/domahony/ARM-SDL1/include/SDL -I/usr/local/include -I/home/domahony/ncurses-arm/include/ 
pimotor_LDADD=-L/home/domahony/ARM-SDL1/lib -lSDL -L/home/domahony/WiringPI/lib/ -lwiringPi -L/home/domahony/ncurses-arm/lib/ -lncurses++ -lncurses